--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                    Jon Barron
+                    Zhenyu Li
                 </p>
                 <p>
                     Hi! I'm a third-year PhD student in computer science at University of Virginia, advised by Prof.<a href="https://changlousys.github.io/">Chang Lou</a>. I did my master degree
