--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     Zhenyu Li
                 </p>
                 <p>
-                    Hi! I'm a third-year PhD student in computer science at University of Virginia, advised by Prof.<a href="https://changlousys.github.io/">Chang Lou</a>. I did my master degree
-                    at University of California, San Diego and my undergradute at Nanjing Univeristy.
+                    Hi! I'm a third-year PhD student in computer science at the University of Virginia, advised by Prof. <a href="https://changlousys.github.io/">Chang Lou</a>.
+                    I completed my master's degree at the University of California, San Diego, and my undergraduate degree at Nanjing University.
                 </p>
                 <p style="text-align:center">
                     <a href="vnr3ne@virginia.edu">Email</a> &nbsp;/&nbsp;
-                    <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
+                    <a href="data/Resume_Zhenyu.pdf">CV</a> &nbsp;/&nbsp;
                     <!--                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;-->
                     <!--                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;-->
                     <!--                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;-->
@@ -36,7 +36,7 @@
                 </p>
             </td>
             <td style="padding:2.5%;width:37%;max-width:37%">
-<!--                <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>-->
+                <a href="images/zhenyu.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
             </td>
         </tr>
         </tbody></table>
