--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
                 </p>
                 <p style="text-align:center">
                     <a href="vnr3ne@virginia.edu">Email</a> &nbsp;/&nbsp;
-                    <a href="data/Resume_Zhenyu.pdf">CV</a> &nbsp;/&nbsp;
-                    <!--                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;-->
-                    <!--                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;-->
-                    <!--                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;-->
-                    <!--                  <a href="https://github.com/jonbarron/">Github</a>-->
+                    <a href="data/Resume_Zhenyu.pdf">CV</a>
                 </p>
             </td>
             <td style="padding:2.5%;width:37%;max-width:37%">
@@ -52,13 +48,44 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <!-- Paper 1: NSDI 2026 -->
         <tr>
-            <td>
-
+            <td style="padding:16px;width:100%;vertical-align:middle">
+                <a href="#">
+                    <span class="papertitle">Pilot Execution: Simulating Failure Recovery In Situ for Production Distributed Systems</span>
+                </a>
+                <br>
+                <strong>Zhenyu Li</strong>,
+                <a href="#">Angting Cai</a>,
+                <a href="https://changlousys.github.io/">Chang Lou</a>
+                <br>
+                <em>NSDI</em>, 2026
+                <br>
+                <a href="#">code</a>
+                /
+                <a href="#">slides</a>
             </td>
         </tr>
+
+        <!-- Paper 2: ESORICS 2023 -->
+        <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+                <a href="#">
+                    <span class="papertitle">Secure Split Learning against Property Inference, Data Reconstruction, and Feature Space Hijacking Attacks</span>
+                </a>
+                <br>
+                <a href="#">Yunlong Mao</a>,
+                <a href="#">Zexi Xin</a>,
+                <strong>Zhenyu Li</strong>,
+                et al.
+                <br>
+                <em>ESORICS</em>, 2023
+            </td>
+        </tr>
+
         </tbody></table>
     </td>
 </tr>
 </tbody></table>
 </body>
+</html>
