--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
         <!-- Paper 1: NSDI 2026 -->
         <tr>
             <td style="padding:16px;width:100%;vertical-align:middle">
-                <a href="#">
-                    <span class="papertitle">Pilot Execution: Simulating Failure Recovery In Situ for Production Distributed Systems</span>
-                </a>
+                <span class="papertitle">Pilot Execution: Simulating Failure Recovery In Situ for Production Distributed Systems</span>
                 <br>
                 <strong>Zhenyu Li</strong>,
-                <a href="#">Angting Cai</a>,
-                <a href="https://changlousys.github.io/">Chang Lou</a>
+                Angting Cai,
+                Chang Lou
                 <br>
-                <em>NSDI</em>, 2026
+                <em>The 23rd USENIX Symposium on Networked Systems Design and Implementation (NSDI)</em>, 2026
                 <br>
                 <a href="#">code</a>
                 /
@@ -70,16 +68,14 @@
         <!-- Paper 2: ESORICS 2023 -->
         <tr>
             <td style="padding:16px;width:100%;vertical-align:middle">
-                <a href="#">
-                    <span class="papertitle">Secure Split Learning against Property Inference, Data Reconstruction, and Feature Space Hijacking Attacks</span>
-                </a>
+                <span class="papertitle">Secure Split Learning against Property Inference, Data Reconstruction, and Feature Space Hijacking Attacks</span>
                 <br>
-                <a href="#">Yunlong Mao</a>,
-                <a href="#">Zexi Xin</a>,
+                Yunlong Mao,
+                Zexi Xin,
                 <strong>Zhenyu Li</strong>,
                 et al.
                 <br>
-                <em>ESORICS</em>, 2023
+                <em>The 28th European Symposium on Research in Computer Security (ESORICS)</em>, 2023
             </td>
         </tr>
 
