--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             </td>
         </tr>
         </tbody></table>
+
+        <!-- Research Section -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
             <td style="padding:16px;width:100%;vertical-align:middle">
@@ -46,6 +48,16 @@
             </td>
         </tr>
         </tbody></table>
+
+        <!-- Publications Section -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+                <h2>Publications</h2>
+            </td>
+        </tr>
+        </tbody></table>
+
         <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <!-- Paper 1: NSDI 2026 -->
@@ -80,6 +92,45 @@
         </tr>
 
         </tbody></table>
+
+        <!-- Awards and Honors Section -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+                <h2>Awards and Honors</h2>
+                <ul>
+                    <li>UVA Outstanding Teaching Assistant Award, 2024</li>
+                    <li>SOSP 2024 Travel Grant</li>
+                </ul>
+            </td>
+        </tr>
+        </tbody></table>
+
+        <!-- Experience Section -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+                <h2>Experience</h2>
+                <ul>
+                    <li>Software Engineer Intern, Amazon Web Services (AWS), Jun. - Sep. 2023</li>
+                    <li>Software Engineer Intern, Alibaba, Jun. - Sep. 2021</li>
+                </ul>
+            </td>
+        </tr>
+        </tbody></table>
+
+        <!-- Footer -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+            <td style="padding:16px">
+                <hr style="border:0;border-top:1px solid #ddd;margin:20px 0;">
+                <p style="text-align:center;font-size:small;color:#666;">
+                    Updated at Jan. 2026 &nbsp;&nbsp;|&nbsp;&nbsp; This website is a modification of <a href="https://jonbarron.info/" style="color:#666;">Jon Barron's</a>
+                </p>
+            </td>
+        </tr>
+        </tbody></table>
+
     </td>
 </tr>
 </tbody></table>
