--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 </p>
                 <p style="text-align:center">
                     <a href="vnr3ne@virginia.edu">Email</a> &nbsp;/&nbsp;
-                    <a href="data/Resume_Zhenyu.pdf">CV</a>
+                    <a href="data/Resume_Zhenyu.pdf">CV</a> &nbsp;/&nbsp;
+                    <a href="https://scholar.google.com/citations?user=-s1OM9EAAAAJ&hl=en">Scholar</a>
                 </p>
             </td>
             <td style="padding:2.5%;width:37%;max-width:37%">
