--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     Zhenyu Li
                 </p>
                 <p>
-                    Hi! I'm a third-year PhD student in computer science at the University of Virginia, advised by Prof. <a href="https://changlousys.github.io/">Chang Lou</a>.
-                    I completed my master's degree at the University of California, San Diego, and my undergraduate degree at Nanjing University.
+                    Hi! I'm a third-year PhD student in computer science at the <a href="https://www.virginia.edu/">University of Virginia (UVA)</a>, advised by Prof. <a href="https://changlousys.github.io/">Chang Lou</a>.
+                    I completed my master's degree at the <a href="https://ucsd.edu/">University of California, San Diego (UCSD)</a>, and my undergraduate degree at <a href="https://www.nju.edu.cn/en/">Nanjing University</a>.
                 </p>
                 <p style="text-align:center">
-                    <a href="vnr3ne@virginia.edu">Email</a> &nbsp;/&nbsp;
+                    <a href="mailto:vnr3ne@virginia.edu">Email</a> &nbsp;/&nbsp;
                     <a href="data/Resume_Zhenyu.pdf">CV</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=-s1OM9EAAAAJ&hl=en">Scholar</a>
                 </p>
@@ -44,7 +44,7 @@
             <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                    I'm interested in distributed system and reliability.
+                    My research interests broadly lie in distributed systems and reliability. I aim to build systems that can automatically detect, diagnose, and recover from failures in large-scale distributed environments. My work focuses on developing practical tools and techniques to improve the resilience and observability of cloud infrastructure and production systems.
                 </p>
             </td>
         </tr>
@@ -126,7 +126,7 @@
             <td style="padding:16px">
                 <hr style="border:0;border-top:1px solid #ddd;margin:20px 0;">
                 <p style="text-align:center;font-size:small;color:#666;">
-                    Updated at Jan. 2026 &nbsp;&nbsp;|&nbsp;&nbsp; This website is a modification of <a href="https://jonbarron.info/" style="color:#666;">Jon Barron's</a>
+                    Updated at Jan. 2026 &nbsp;&nbsp;|&nbsp;&nbsp; This website is a modification of <a href="https://jonbarron.info/" style="color:#1772d0;">Jon Barron's</a>
                 </p>
             </td>
         </tr>
