--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                    My research interests broadly lie in distributed systems and reliability. I aim to build systems that can automatically detect, diagnose, and recover from failures in large-scale distributed environments. My work focuses on developing practical tools and techniques to improve the resilience and observability of cloud infrastructure and production systems.
+                    My research interests lie in distributed systems and reliability. I focus on building practical tools that can automatically detect, diagnose, and recover from failures in production cloud infrastructure.
                 </p>
             </td>
         </tr>
@@ -59,7 +59,6 @@
         </tr>
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
         <!-- Paper 1: NSDI 2026 -->
         <tr>
