--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 <tr style="padding:0px">
     <td style="padding:0px">
+        <!-- Header Section -->
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
@@ -51,14 +52,12 @@
         </tbody></table>
 
         <!-- Publications Section -->
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
-            <td style="padding:16px;width:100%;vertical-align:middle">
+            <td style="padding:16px;padding-bottom:0px;width:100%;vertical-align:middle">
                 <h2>Publications</h2>
             </td>
         </tr>
-        </tbody></table>
-
 
         <!-- Paper 1: NSDI 2026 -->
         <tr>
@@ -90,7 +89,6 @@
                 <em>The 28th European Symposium on Research in Computer Security (ESORICS)</em>, 2023
             </td>
         </tr>
-
         </tbody></table>
 
         <!-- Awards and Honors Section -->
