--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         <!-- Paper 2: ESORICS 2023 -->
         <tr>
             <td style="padding:16px;width:100%;vertical-align:middle">
-                <span class="papertitle">Secure Split Learning against Property Inference, Data Reconstruction, and Feature Space Hijacking Attacks</span>
+                <a href="data/ppsplit-CR.pdf">
+                    <span class="papertitle">Secure Split Learning against Property Inference, Data Reconstruction, and Feature Space Hijacking Attacks</span>
+                </a>
                 <br>
                 Yunlong Mao,
                 Zexi Xin,
@@ -87,6 +89,8 @@
                 et al.
                 <br>
                 <em>The 28th European Symposium on Research in Computer Security (ESORICS)</em>, 2023
+                <br>
+                <a href="data/ppsplitPre.pdf">slides</a>
             </td>
         </tr>
         </tbody></table>
